Add auth interceptor
