# internal/server/auth.go
@@ -2,8 +2,8 @@ package server
 
 import (
 	"context"
-	"errors"
 	"github.com/sirupsen/logrus"
+	"github.com/web-programming-fall-2022/digivision-backend/internal/errors"
 	"github.com/web-programming-fall-2022/digivision-backend/internal/storage"
 	"github.com/web-programming-fall-2022/digivision-backend/internal/token"
 	pb "github.com/web-programming-fall-2022/digivision-backend/pkg/api/v1"
@@ -40,15 +40,15 @@ func NewAuthServiceServer(
 func (s *AuthServiceServer) Login(ctx context.Context, req *pb.LoginRequest) (*pb.LoginResponse, error) {
 	user, err := s.Storage.GetUserByEmail(req.Email)
 	if err != nil {
-		return nil, status.Error(codes.NotFound, errors.New("user not found").Error())
+		return nil, status.Error(codes.NotFound, "user not found")
 	}
 	err = bcrypt.CompareHashAndPassword([]byte(user.PasswordHash), []byte(req.Password))
 	if err != nil {
-		return nil, status.Error(codes.NotFound, errors.New("user not found").Error())
+		return nil, status.Error(codes.NotFound, "user not found")
 	}
 	authToken, refreshToken, err := s.generateTokens(user)
 	if err != nil {
-		return nil, status.Error(codes.Internal, errors.New("could not generate tokens").Error())
+		return nil, status.Error(codes.Internal, "could not generate tokens")
 	}
 	return &pb.LoginResponse{
 		AuthToken:    authToken,
@@ -63,16 +63,16 @@ func (s *AuthServiceServer) Register(ctx context.Context, req *pb.RegisterReques
 	}
 	_, err = s.Storage.GetUserByEmail(req.Email)
 	if err == nil {
-		return nil, status.Error(codes.AlreadyExists, errors.New("email already exists").Error())
+		return nil, status.Error(codes.AlreadyExists, "email already exists")
 	}
 	_, err = s.Storage.GetUserByPhoneNumber(req.PhoneNumber)
 	if err == nil {
-		return nil, status.Error(codes.AlreadyExists, errors.New("phone number already exists").Error())
+		return nil, status.Error(codes.AlreadyExists, "phone number already exists")
 	}
 
 	hash, err := bcrypt.GenerateFromPassword([]byte(req.Password), bcrypt.DefaultCost)
 	if err != nil {
-		return nil, status.Error(codes.Internal, errors.New("could not hash password").Error())
+		return nil, status.Error(codes.Internal, "could not hash password")
 	}
 	user := storage.UserAccount{
 		Email:        req.Email,
@@ -85,12 +85,12 @@ func (s *AuthServiceServer) Register(ctx context.Context, req *pb.RegisterReques
 	err = s.Storage.CreateUser(&user)
 	if err != nil {
 		logrus.Errorln(err)
-		return nil, status.Error(codes.Internal, errors.New("could not create user").Error())
+		return nil, status.Error(codes.Internal, "could not create user")
 	}
 	authToken, refreshToken, err := s.generateTokens(&user)
 	if err != nil {
 		logrus.Errorln(err)
-		return nil, status.Error(codes.Internal, errors.New("could not generate tokens").Error())
+		return nil, status.Error(codes.Internal, "could not generate tokens")
 	}
 	return &pb.RegisterResponse{
 		AuthToken:    authToken,
@@ -101,15 +101,15 @@ func (s *AuthServiceServer) Register(ctx context.Context, req *pb.RegisterReques
 func (s *AuthServiceServer) RefreshToken(ctx context.Context, req *pb.RefreshTokenRequest) (*pb.RefreshTokenResponse, error) {
 	claims, err := s.TokenManager.Validate(ctx, req.RefreshToken)
 	if err != nil {
-		return nil, status.Error(codes.Unauthenticated, errors.New("invalid token").Error())
+		return nil, status.Error(codes.Unauthenticated, "invalid token")
 	}
 	userId, ok := claims["userID"]
 	if !ok {
-		return nil, status.Error(codes.Unauthenticated, errors.New("no userId in token").Error())
+		return nil, status.Error(codes.Unauthenticated, "no userId in token")
 	}
 	authToken, refreshToken, err := s.generateTokensWithID(userId)
 	if err != nil {
-		return nil, status.Error(codes.Internal, errors.New("could not generate tokens").Error())
+		return nil, status.Error(codes.Internal, "could not generate tokens")
 	}
 	return &pb.RefreshTokenResponse{
 		AuthToken:    authToken,
@@ -118,22 +118,9 @@ func (s *AuthServiceServer) RefreshToken(ctx context.Context, req *pb.RefreshTok
 }
 
 func (s *AuthServiceServer) UserInfo(ctx context.Context, req *pb.UserInfoRequest) (*pb.UserInfoResponse, error) {
-	claims, err := s.TokenManager.Validate(ctx, req.AuthToken)
-	if err != nil {
-		logrus.Errorln(err)
-		return nil, status.Error(codes.Unauthenticated, errors.New("invalid token").Error())
-	}
-	userId, ok := claims["userID"]
-	if !ok {
-		return nil, status.Error(codes.Unauthenticated, errors.New("no userId in token").Error())
-	}
-	id, err := strconv.Atoi(userId)
-	if err != nil {
-		return nil, status.Error(codes.Unauthenticated, errors.New("wrong userId").Error())
-	}
-	user, err := s.Storage.GetUserByID(uint(id))
-	if err != nil {
-		return nil, status.Error(codes.Unauthenticated, errors.New("user not found").Error())
+	user := GetContextUser(ctx)
+	if user == nil {
+		return nil, errors.NotLoggedIn
 	}
 	return &pb.UserInfoResponse{
 		Email:       user.Email,
@@ -148,12 +135,12 @@ func (s *AuthServiceServer) Logout(ctx context.Context, req *pb.LogoutRequest) (
 	err := s.TokenManager.InvalidateToken(ctx, req.AuthToken)
 	if err != nil {
 		logrus.Errorln(err)
-		return nil, status.Error(codes.Internal, errors.New("could not invalidate auth token").Error())
+		return nil, status.Error(codes.Internal, "could not invalidate auth token")
 	}
 	err = s.TokenManager.InvalidateToken(ctx, req.RefreshToken)
 	if err != nil {
 		logrus.Errorln(err)
-		return nil, status.Error(codes.Internal, errors.New("could not invalidate refresh token").Error())
+		return nil, status.Error(codes.Internal, "could not invalidate refresh token")
 	}
 	return &emptypb.Empty{}, nil
 }
